# LOG_ANALYZER

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SENTINEL_GUIDE.html  SENTINEL_report.csv  guiv3.py  pyproject.toml  sentinel.py  test_sentinel.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: LOG_ANALYER_REPORT.docx  REPORT.docx
examples/: sample_analysis.md
sentinel/: __init__.py  active_defense.py  ai_engine.py  detection.py  enrichment.py  forensics.py  gui.py  parser.py  plots.py  report.py  scoring.py  simulator.py  storage.py
