[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-log-analyzer"
version = "1.0.0"
description = "Self-Evolving Neural Threat Intelligence Engine for log analysis"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "ramKarthik57", email = "your.email@example.com"},
]
maintainers = [
    {name = "ramKarthik57", email = "your.email@example.com"},
]
keywords = ["security", "log-analysis", "threat-intelligence", "ai", "ml", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "networkx",
    "scipy",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/ramKarthik57/LOG_ANALYZER"
Repository = "https://github.com/ramKarthik57/LOG_ANALYZER"
Issues = "https://github.com/ramKarthik57/LOG_ANALYZER/issues"
Changelog = "https://github.com/ramKarthik57/LOG_ANALYZER/blob/main/CHANGELOG.md"

[project.scripts]
sentinel = "sentinel:main"

[tool.setuptools]
packages = ["sentinel"]

[tool.setuptools.package-data]
sentinel = ["*.txt", "*.md"]